--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/jit": "^0.1.18",
         "autoprefixer": "^10.3.3",
         "axios": "^0.21",
         "browser-sync": "^2.27.5",
@@ -19,5 +18,6 @@
         "lodash": "^4.17.19",
         "postcss": "^8.3.6",
         "tailwindcss": "^2.2.9"
-    }
+    },
+    "dependencies": {}
 }
